UDisks mount vfat filesystems with flush option

REVIEW:105224
BUG:273792